--- a/mcaUtilsiOS/Components/ListOptionsVC.xib
+++ b/mcaUtilsiOS/Components/ListOptionsVC.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -27,12 +26,12 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOD-MS-Bsm">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="867"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P2e-Hg-LZM">
@@ -106,16 +105,15 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="VOD-MS-Bsm" secondAttribute="bottom" id="1oj-N4-bzf"/>
                 <constraint firstItem="P2e-Hg-LZM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="8T2-GY-fxF"/>
                 <constraint firstItem="P2e-Hg-LZM" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.7" id="8zh-j2-h0v"/>
-                <constraint firstAttribute="bottom" secondItem="VOD-MS-Bsm" secondAttribute="bottom" id="ETx-VC-cZD"/>
-                <constraint firstAttribute="trailing" secondItem="VOD-MS-Bsm" secondAttribute="trailing" id="RCN-1P-5xb"/>
-                <constraint firstItem="VOD-MS-Bsm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="gXU-rJ-FOl"/>
+                <constraint firstItem="VOD-MS-Bsm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Nqf-6f-Exs"/>
+                <constraint firstItem="VOD-MS-Bsm" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="gUK-fY-F5L"/>
                 <constraint firstItem="P2e-Hg-LZM" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="oBf-aG-zEb"/>
-                <constraint firstItem="VOD-MS-Bsm" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="qtq-ff-hzj"/>
+                <constraint firstAttribute="trailing" secondItem="VOD-MS-Bsm" secondAttribute="trailing" id="xEE-yl-UoB"/>
                 <constraint firstItem="P2e-Hg-LZM" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.8" id="yMB-0P-EHY"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="138.40000000000001" y="115.59220389805098"/>
         </view>
     </objects>
